# real-time-face-detection

./: CMakeLists.txt  README.md  detector.cpp  detector.h  main.cpp
